force-app/main/default/objects/Regional_Price__c/Regional_Price__c.object-meta.xml
<CustomObject>
    <label>Regional Price</label>
    <nameField>
        <displayFormat>RP-{00000}</displayFormat>
        <label>Regional Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regional Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>