force-app/main/default/objects/Regional_Price__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regional Prices</relationshipLabel>
    <relationshipName>Regional_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>