force-app/main/default/objects/Regional_Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Regional Prices</relationshipLabel>
    <relationshipName>Regional_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>