force-app/main/default/objects/Regional_Price__c/fields/TE_Region__c.field-meta.xml
<CustomField>
    <fullName>TE_Region__c</fullName>
    <label>TE Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TE_Regions</valueSetName>
    </valueSet>
</CustomField>